fixing button
slightly off center text is now fixed

--- a/grails-app/assets/stylesheets/assessment.css
+++ b/grails-app/assets/stylesheets/assessment.css
@@ -35,7 +35,9 @@ h1{
     background-color: green;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 5%;
+    padding-top: 3%;
+    padding-bottom: 3%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
